# ising-transition-matrix-eigenvalue

./: .gitmodules  CMakeLists.txt  N=3_heat-bath_uniform.txt  N=3_metropolis_uniform.txt  N=4_heat-bath_uniform.txt  N=4_metropolis_uniform.txt  README.md  main.cpp
